--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "gamergamma"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.2.0"
+description = "[Linux-only] Hotkey-adjustable gamma (hardware/monitor) & vibrance (NVidia), developed by and for colorblind gamers."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [ddcutil, nvibrant-bin]
+dependencies = ["pynput>=1.8.1"]
